# vit_mlx

./: .gitignore  README.md  pyproject.toml
notebooks/: vit.ipynb
src/vit_mlx/: __init__.py  simple_vit.py  utils.py  vit.py
